# react-native-io

./: .gitignore  CONTRIBUTING.md  Io.podspec  LICENSE  README.md  package.json  react-native.config.js  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/java/com/io/: IoModule.kt  IoPackage.kt
android/src/main/java/xyz/bczl/io/: IOHttpClient.java  IOPackage.java
cpp/: CMakeLists.txt
cpp/hash/: CMakeLists.txt
cpp/network/: CMakeLists.txt  IOHttpClient.hpp  IOHttpClientAndroid.cpp  IOHttpClientAndroid.hpp  IOHttpClientIOS.hpp  IONetwork.hpp  IONetworkTypes.hpp
cpp/noop/: CMakeLists.txt  StdIOSpec-generated.cpp  StdIOSpec.h
cpp/src/: FSHostObject.hpp  IOFileHandle.hpp  IOFileSystem.hpp  IORequestHostObject.hpp  IOSDirectories.hpp  JSIHostObjectBase.hpp  JniHelper.hpp  Logger.h  LoggerAndroid.cpp  NativeStdIO.cpp  NativeStdIO.h  PlatformHostObject.hpp  StdIOSpecJSI.h
example/: app.json  jest.config.js  metro.config.js  package.json  rn-harness.config.mjs
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/io/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/IoExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/IoExample.xcodeproj/: project.pbxproj
example/ios/IoExample.xcodeproj/xcshareddata/xcschemes/: IoExample.xcscheme
example/ios/IoExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
example/src/__tests__/: Directory.harness.ts  File.harness.ts  Platform.harness.ts  Request.harness.ts
ios/: IOHttpClientIOS.mm  IOSDirectories.mm  Io.h  Io.mm  LoggerIOS.mm  StdIOOnLoad.mm
src/: Directory.ts  FSContext.ts  File.ts  FileHandle.ts  NativeIo.ts  NativeStdIO.ts  Request.ts  index.tsx  types.ts
